icons not showing in about_me, main.js dislocated, fix email and phone number of frame in about_me

--- a/about_me.css
+++ b/about_me.css
@@ -65,3 +65,14 @@ body {
     border-width: 2px;
     color: white;
 }
+
+@media (max-width: 700px) {
+    .contact-div {
+        width: 100%;
+        left: 0;
+    }
+    .heading p {
+        width: 75%;
+        left: 15%;
+    }
+}
